# utf8_range

./: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  main.c  utf8_validity.cc  utf8_validity_test.cc  utf8dfa.cpp  utf8vec.cpp  utils.h  workspace_deps.bzl
.github/workflows/: bazel_tests.yml  cmake_tests.yml
fuzz/: BUILD.bazel
github/: CONTRIBUTING.md
