# Copyright 2022 Google LLC
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

load("@rules_fuzzing//fuzzing:cc_defs.bzl", "cc_fuzz_test")

package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])

exports_files(["LICENSE"])

cc_library(
    name = "utf8_range",
    srcs = [
        "naive.c",
        "range2-neon.c",
        "range2-sse.c",
    ],
    hdrs = ["utf8_range.h"],
)

cc_library(
    name = "utf8_validity",
    srcs = ["utf8_validity.cc"],
    hdrs = ["utf8_validity.h"],
    deps = [
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "utf8_validity_test",
    srcs = ["utf8_validity_test.cc"],
    deps = [
        ":utf8_validity",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_fuzz_test(
    name = "utf8_validity_fuzzer",
    testonly = 1,
    srcs = ["utf8_validity_fuzzer.cc"],
    dicts = ["utf8_fuzzer.dict"],
    deps = [":utf8_validity"],
)
